--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     224815 - Mateusz J. <br/>
     Zadania: <br/>
     <a href="cwiczenie1/tictactoe.html">TicTacToe</a><br/>
+    <a href="cwiczenie2/flags.html">Flags</a><br/>
 </body>
 </html>
