add "fortuna" game

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 
 <html lang="pl">
 <head>
-<title>Programowanie Gier 2D Mateusz J.</title>
-  <meta charset="utf-8">
-  <meta name="description" content="A simple HTML5 Template for new projects.">
-  <meta name="author" content="SitePoint">
+<title>Programowanie Dynamiczych Stron WWW Mateusz J.</title>
 </head>
 
 <body>
