Looks like everything is working

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     Zadania: <br/>
     <a href="cwiczenie1/tictactoe.html">TicTacToe</a><br/>
     <a href="cwiczenie2/flags.html">Flags</a><br/>
+    <a href="kolofortuny/kf.html">Fortuna</a><br/>
 </body>
 </html>
